--- a/HorusMobile/HorusMobile.Android/Properties/AndroidManifest.xml
+++ b/HorusMobile/HorusMobile.Android/Properties/AndroidManifest.xml
@@ -4,7 +4,7 @@
 	<permission android:name="horusmobile-702dc.permission.C2D_MESSAGE" android:protectionLevel="signature" />
 	<uses-permission android:name="horusmobile-702dc.permission.C2D_MESSAGE" />
 	<uses-permission android:name="android.permission.INTERNET" />
-	<application android:icon="@mipmap/ic_launcher" android:usesCleartextTraffic="true" android:label="CMSJ Horus Mobile">
+	<application android:icon="@mipmap/ic_launcher" android:usesCleartextTraffic="true" android:label="Aclisa Mobile">
 		<receiver android:name="com.onesignal.GcmBroadcastReceiver" android:permission="com.google.android.c2dm.permission.SEND">
 			<intent-filter>
 				<action android:name="com.google.android.c2dm.intent.RECEIVE" />
