--- a/HorusMobile/HorusMobile.Android/AclisaMobile.Android.csproj
+++ b/HorusMobile/HorusMobile.Android/AclisaMobile.Android.csproj
@@ -57,7 +57,7 @@
     <AndroidLinkMode>Full</AndroidLinkMode>
     <AndroidUseAapt2>true</AndroidUseAapt2>
     <AndroidCreatePackagePerAbi>false</AndroidCreatePackagePerAbi>
-    <AndroidPackageFormat>aab</AndroidPackageFormat>
+    <AndroidPackageFormat>apk</AndroidPackageFormat>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Android" />
