--- a/HorusMobile/HorusMobile.Android/Properties/AndroidManifest.xml
+++ b/HorusMobile/HorusMobile.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.colegiodemedicos.horusmobile" android:installLocation="auto" android:versionCode="9" android:versionName="9">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.aclisa.aclisamobile" android:installLocation="auto" android:versionCode="1" android:versionName="1">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
 	<permission android:name="horusmobile-702dc.permission.C2D_MESSAGE" android:protectionLevel="signature" />
 	<uses-permission android:name="horusmobile-702dc.permission.C2D_MESSAGE" />
