--- a/HorusMobile/HorusMobile.iOS/Info.plist
+++ b/HorusMobile/HorusMobile.iOS/Info.plist
@@ -21,11 +21,11 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>MinimumOSVersion</key>
-	<string>8.0</string>
+	<string>10.0</string>
 	<key>CFBundleDisplayName</key>
-	<string>HorusMobile</string>
+	<string>AclisaMobile</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.colegiodemedicos2.HorusMobile</string>
+	<string>com.aclisa.AclisaMobile</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>UILaunchStoryboardName</key>
@@ -34,10 +34,6 @@
 	<string>HorusMobile</string>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcon.appiconset</string>
-	<key>UIBackgroundModes</key>
-	<array>
-		<string>remote-notification</string>
-	</array>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
@@ -57,5 +53,9 @@
 	</dict>
 	<key>CFBundleShortVersionString</key>
 	<string>V1</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
