--- a/OneSignalNotificationServiceExtension/Entitlements.plist
+++ b/OneSignalNotificationServiceExtension/Entitlements.plist
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>com.colegiodemedicos.horusmobile</string>
+		<string>group.com.aclisa.AclisaMobile.onesignal</string>
 	</array>
 </dict>
 </plist>
