--- a/OneSignalNotificationServiceExtension/Info.plist
+++ b/OneSignalNotificationServiceExtension/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>OneSignalNotificationServiceExtension</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.companyname.OneSignalNotificationServiceExtension</string>
+	<string>com.aclisa.AclisaMobile.OneSignalNotificationServiceExtension</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -23,11 +23,11 @@
 	<key>MinimumOSVersion</key>
 	<string>10.3</string>
 	<key>NSExtension</key>
-  <dict>
-    <key>NSExtensionPointIdentifier</key>
-    <string>com.apple.usernotifications.service</string>
-    <key>NSExtensionPrincipalClass</key>
-    <string>NotificationService</string>
-  </dict>
+	<dict>
+		<key>NSExtensionPointIdentifier</key>
+		<string>com.apple.usernotifications.service</string>
+		<key>NSExtensionPrincipalClass</key>
+		<string>NotificationService</string>
+	</dict>
 </dict>
 </plist>
